添加云讲堂的工作

--- a/2022.md
+++ b/2022.md
@@ -1,28 +1,40 @@
-# 2022 年主要工作
+# 2022 年本栏目主要工作
 
 1. 主站发布 **8** 篇技术文章，**2** 篇非技术文章，另有 **2** 篇技术文章在主站后台审稿、修改中。
-2. 2022 年中国 R 语言大会软件工具专场，组织 **3** 个场次，共计 **16** 位嘉宾。
+2. 2022 年第十五届中国 R 语言大会软件工具专场，组织 **3** 个场次，共计 **16** 位嘉宾。
+3. 邀请嘉宾上云讲堂 **5** 次。
 
 ## 技术博客
 
-- 庄亮亮 / 手把手带你搭建个人博客（基础版） https://cosx.org/2022/03/build-blog-step-by-step/
-
-- 邱怡轩 / 龙芯可以做数据分析吗？ https://cosx.org/2022/03/loongson-for-data-analysis/
-
-- 袁凡 / Echarts4r 挥发化飞花 https://cosx.org/2022/04/echarts4r-flower/
-
-- 袁凡 / 探索定西市的 Sci-Hub 流量之谜 https://cosx.org/2022/05/scihub-traffic-analysis/
-
-- 庄亮亮 / 给初学者准备的 R 语言深度学习教程 https://cosx.org/2022/05/deep-learning-with-r-for-beginners/
-
-- 黄湘云 / 地区分布图及其应用 https://cosx.org/2022/05/choropleth-map/
-
-- 黄湘云 / R 语言制作地区分布图及其动画 https://cosx.org/2022/07/choropleth-map-animation/
-
-- 黄湘云 /R Markdown 制作 beamer 幻灯片 https://cosx.org/2022/08/beamer-not-down/
+- 庄亮亮 / 手把手带你搭建个人博客（基础版） <https://cosx.org/2022/03/build-blog-step-by-step/>
+- 邱怡轩 / 龙芯可以做数据分析吗？ <https://cosx.org/2022/03/loongson-for-data-analysis/>
+- 袁凡 / echarts4r 挥发化飞花 <https://cosx.org/2022/04/echarts4r-flower/>
+- 袁凡 / 探索定西市的 Sci-Hub 流量之谜 <https://cosx.org/2022/05/scihub-traffic-analysis/>
+- 庄亮亮 / 给初学者准备的 R 语言深度学习教程 <https://cosx.org/2022/05/deep-learning-with-r-for-beginners/>
+- 黄湘云 / 地区分布图及其应用 <https://cosx.org/2022/05/choropleth-map/>
+- 黄湘云 / R 语言制作地区分布图及其动画 <https://cosx.org/2022/07/choropleth-map-animation/>
+- 黄湘云 / R Markdown 制作 beamer 幻灯片 <https://cosx.org/2022/08/beamer-not-down/>
 
 ## 非技术博客
 
-- 郝鸿涛 / 我的三次美国博士申请 https://cosx.org/2022/09/my-phd-app/
+- 郝鸿涛 / 我的三次美国博士申请 <https://cosx.org/2022/09/my-phd-app/>
+- 张沥今 / 北美博士项目申请经验 <https://cosx.org/2022/10/tutorial-on-phd-application/>
 
-- 张沥今 / 北美博士项目申请经验 https://cosx.org/2022/10/tutorial-on-phd-application/
+## 云讲堂
+
+- 第十一讲｜任焱：R 动态交互可视化进阶与 shiny 入门 <https://mp.weixin.qq.com/s/lDH7TIZShiQXcddHPfG6Qg>
+- 第八讲｜孔令仁：使用 Quarto 快速构建个人博客网站 <https://mp.weixin.qq.com/s/UczY-85j6iqpjTDWzw79Og>
+- 第七讲｜黄湘云：R Markdown 制作 beamer 幻灯片 <https://mp.weixin.qq.com/s/pYug6taUZiVcyNOuO-xSmA>
+- 第六讲｜庄亮亮：给初学者准备的 R 语言深度学习教程 <https://mp.weixin.qq.com/s/C3wBiofESC5P-ATupG73xA>
+- 第五讲｜袁凡：探索定西市的 Sci-Hub 流量之谜 <https://mp.weixin.qq.com/s/C6mfqsLMW8zabyiFAn8bZQ>
+
+没有出力但是内容与软件工具十分相关的云讲堂内容。
+
+- 第十三讲｜邱怡轩：深度学习框架中的编译加速方法 <https://mp.weixin.qq.com/s/rQDI12bkWnTCT37Mt5mhig>
+- 第十二讲｜李代：基于 Rmarkdown 制作 Word 文档 <https://mp.weixin.qq.com/s/66ipGOyHHafU_EXU_Xjb3g>
+
+统计之都云讲堂的录制视频发布在 B 站，详情[点击链接](https://space.bilibili.com/22035559/channel/collectiondetail?sid=70922)查看。
+
+## 第十五届中国 R 语言会议
+
+第十五届中国 R 语言会议的视频合集，详情[点击链接](https://space.bilibili.com/22035559/channel/collectiondetail?sid=871909)查看。
